# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.363 2005/11/02 21:49:15 rocket Exp $

  02 Nov 2005; Eric Edgar <rocket@gentoo.org>
  +examples/stage4_template.spec:
  Preliminary stage4_template.spec file

  01 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +catalyst-2.0_pre20051101-slot.patch, catalyst:
  Updated version stamp and added slot patch.

  26 Oct 2005; Eric Edgar <rocket@gentoo.org> modules/netboot_target.py:
  Fix ordering problem so self.settings is defined

  18 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Correct a rsync issue when the directory doesnt exist

  17 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/embedded/embedded-controller.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/netboot/netboot-controller.sh,
  targets/stage4/stage4-controller.sh:
  run pre_kmerge and post_kmerge only once

  17 Oct 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/bootloader-setup.sh:
  MIPS bootloader patch

  15 Oct 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/mips-arcload_conf.sh:
  Fix MIPS Serial Detection

  13 Oct 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/bootloader-setup.sh, targets/support/create-iso.sh,
  +targets/support/mips-arcload_conf.sh:
  Application of Kumbas patches for MIPS support

  13 Oct 2005; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
  Check for the correct arch specific cd building tool

  13 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Print a warning if livecd/iso is not defined

  11 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py:
  Reverted default CHOST for x86 back to i386-pc-linux-gnu.

  11 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/post-kmerge.sh:
  Check for existence of files in /lib/modules before running depscan.sh. This